[gd_scene load_steps=14 format=3 uid="uid://wjjon1ih65u5"]

[ext_resource type="Script" path="res://script/Player.gd" id="1_xw3nr"]
[ext_resource type="PackedScene" uid="uid://bsydi5g80e858" path="res://scenes/Bullet.tscn" id="2_eaplv"]
[ext_resource type="AudioStream" uid="uid://nu4fs5xuqj0m" path="res://assets/audio/rocketLoop.mp3" id="2_tljfh"]
[ext_resource type="Material" uid="uid://ftsh5ftsmcxs" path="res://assets/resources/PlayerRocketParticles.tres" id="2_wneyp"]
[ext_resource type="PackedScene" uid="uid://bb7f7rspujgff" path="res://scenes/PowerupTimer.tscn" id="3_v1l6e"]
[ext_resource type="AudioStream" uid="uid://buhcovy7llhyk" path="res://assets/audio/laserShoot.wav" id="4_kp4u1"]
[ext_resource type="AudioStream" uid="uid://88s8xma1nlrl" path="res://assets/audio/explosion.wav" id="5_ior5i"]

[sub_resource type="Gradient" id="Gradient_2hmt3"]
offsets = PackedFloat32Array(0, 0.469697, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_caks4"]
gradient = SubResource("Gradient_2hmt3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_raagi"]
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 150.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 6.0
scale_max = 9.0
color_ramp = SubResource("GradientTexture1D_caks4")
collision_mode = 2

[sub_resource type="Gradient" id="Gradient_h82yu"]
offsets = PackedFloat32Array(0, 0.556757, 1)
colors = PackedColorArray(0, 1, 0, 1, 0, 1, 0.0784314, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3nwom"]
gradient = SubResource("Gradient_h82yu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wjogl"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 26.32
gravity = Vector3(0, 0, 0)
initial_velocity_min = 36.17
initial_velocity_max = 151.76
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -100.0
scale_min = 3.0
scale_max = 3.0
color = Color(0.0784314, 1, 0, 1)
color_ramp = SubResource("GradientTexture1D_3nwom")

[node name="Player" type="Node2D"]
z_index = 10
script = ExtResource("1_xw3nr")
BulletScene = ExtResource("2_eaplv")
PowerupProgressBarScene = ExtResource("3_v1l6e")
metadata/_edit_horizontal_guides_ = [-6.0]

[node name="Collision" type="Area2D" parent="."]

[node name="Area" type="CollisionPolygon2D" parent="Collision"]
scale = Vector2(3, 3)
polygon = PackedVector2Array(0, -10, 5, 5, 0, 3, -5, 5)

[node name="Sprite" type="Polygon2D" parent="."]
scale = Vector2(3, 3)
polygon = PackedVector2Array(0, -10, 5, 5, 1.66667, 3.66667, 0, 6.33333, -1.66667, 3.66667, -5, 5)

[node name="Sprite2" type="Polygon2D" parent="Sprite"]
position = Vector2(0.333333, 0)
rotation = 3.14159
scale = Vector2(1, -1)
color = Color(1, 0.360784, 0.360784, 1)
polygon = PackedVector2Array(0.666667, -6.66667, 3.66667, 3, 1.33333, 2)

[node name="Sprite3" type="Polygon2D" parent="Sprite"]
position = Vector2(-0.333333, 0)
color = Color(1, 0.360784, 0.360784, 1)
polygon = PackedVector2Array(0.666667, -6.66667, 3.66667, 3, 1.33333, 2)

[node name="Sprite4" type="Polygon2D" parent="Sprite"]
position = Vector2(-0.333333, 0)
color = Color(1, 0.360784, 0.360784, 1)
polygon = PackedVector2Array(0.333333, 6.33333, 2, 3.66667, 0.333333, 2, -1.33333, 3.66667)

[node name="EngineParticles" type="GPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, 9)
amount = 3000
process_material = ExtResource("2_wneyp")
lifetime = 0.8

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 60
process_material = SubResource("ParticleProcessMaterial_raagi")
one_shot = true
explosiveness = 1.0
local_coords = true

[node name="ShootParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, -30)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_wjogl")
lifetime = 0.2
one_shot = true
explosiveness = 1.0

[node name="Audio" type="Node" parent="."]

[node name="EngineAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_tljfh")
volume_db = -80.0
pitch_scale = 0.7
autoplay = true

[node name="ShootAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_kp4u1")
volume_db = -11.86

[node name="DieAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_ior5i")
volume_db = -11.86
pitch_scale = 0.85

[node name="ShootAgainTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="PowerupTimers" type="Node2D" parent="."]

[connection signal="area_entered" from="Collision" to="." method="collision"]
[connection signal="timeout" from="ShootAgainTimer" to="." method="canShootAgain"]
